<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="username_hint">Instagram username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Log In</string>
    <string name="forgot_login"><font color='#c4c4c4'>Forgot your login details? </font><b>Get help logging in.</b></string>
    <string name="or">OR</string>
    <string name="login_language_english">English</string>
    <string name="post_price_hint">Post price</string>
    <string name="story_price_hint">Story price</string>
    <string name="ads">ads</string>
    <string name="home">home</string>
    <string name="requests">requests</string>
    <string name="users">users</string>
    <string name="wishlist">wishlist</string>
    <string name="following">following</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="create_ad">Create ad</string>
    <string name="edit_ad">Edit Ad</string>
    <string name="decline_ad">Decline</string>
    <string name="choose_the_ad">Choose the ad</string>
    <string name="app_name">Good Ads</string>
    <string name="accept">Accept</string>
    <string name="ad_image">Ad Image</string>
    <string name="distribution">Distribution</string>
    <string name="chose_ad_to_advertise_and_get_money">Chose ad to advertise and get money</string>
    <string name="ad_title">Ad Title</string>
    <string name="ad_type">Ad Type</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="select_image">Select Image</string>
    <string name="apply">Apply</string>
    <string name="create_distribution">Create Distribution</string>
    <string name="create_distribution_description">If you enter data and press \'Create\' your ad will be sent to all users of Good Ads.</string>
    <string name="cancel">Cancel</string>
    <string name="price_for_one_ad">Price for one ad</string>
    <string name="advertisers_number">Advertisers number</string>
    <string name="user_wants_to_advertise">Wants to push your advertisement</string>
    <string name="ok">OK</string>
    <string name="at_all_you_pay">At all you pay</string>
    <string name="expiry_date">EXPIRY DATE</string>
    <string name="cvv2">CVV2</string>
    <string name="card_holder_name">CARD HOLDER NAME</string>
    <string name="payment">Payment</string>
    <string name="request">request #</string>
    <string name="add_new_card">Add New Card</string>
    <string name="card_number">Card Number</string>
    <string name="card_holder_name_small">Card Holder Name</string>
    <string name="expiry_date_small">Expiry Date</string>
    <string name="proceed">proceed</string>
    <string name="view_details_large">VIEW DETAILS</string>

</resources>