<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/login_language_english"
            android:textColor="#c4c4c4"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:adjustViewBounds="true"
                android:src="@color/cardview_dark_background"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/login_hint"
                android:importantForAutofill="no"
                android:inputType="none"
                android:minHeight="48dp"
                android:padding="12dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="no"
                android:background="@drawable/bg_edit_text"
                android:drawableEnd="@drawable/ic_eye"
                android:hint="@string/password_hint"
                android:inputType="none"
                android:minHeight="48dp"
                android:padding="12dp"
                android:singleLine="true"
                android:textSize="14sp"
                tools:ignore="TextFields" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_post_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="16dp"
                    android:autofillHints="no"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/post_price_hint"
                    android:inputType="none"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textSize="14sp"
                    tools:ignore="TextFields"/>

                <EditText
                    android:id="@+id/et_story_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:autofillHints="no"
                    android:background="@drawable/bg_edit_text"
                    android:hint="@string/story_price_hint"
                    android:inputType="none"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:singleLine="true"
                    android:textSize="14sp"
                    tools:ignore="TextFields"/>
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="#3897f0"
                android:padding="12dp"
                android:text="@string/login_button_text"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                app:cornerRadius="4dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/forgot_login"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>