<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/item_user"
            layout="@layout/layout_user" />

        <TextView
            android:id="@+id/tv_message"
            app:layout_constraintTop_toBottomOf="@id/item_user"
            style="@style/HeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="40dp"
            android:textSize="24sp"
            android:text="@string/user_wants_to_advertise" />

        <include
            app:layout_constraintTop_toBottomOf="@id/tv_message"
            android:id="@+id/item_ad"
            android:layout_width="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            layout="@layout/item_ad" />

        <Button
            app:layout_constraintBottom_toTopOf="@id/btn_decline"
            android:layout_marginBottom="8dp"
            android:id="@+id/btn_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            android:text="@string/accept" />

        <Button
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            android:id="@+id/btn_decline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/white"
            android:text="@string/decline_ad" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>