<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F8F8">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="4dp"
            android:paddingTop="4dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginTop="16dp"
                    android:id="@+id/left_arrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_left_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/screen_title"
                    style="@style/HeaderTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center_horizontal"
                    android:text="@string/payment"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/left_arrow"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@id/screen_title"
                    app:layout_constraintStart_toStartOf="@id/screen_title"
                    app:layout_constraintTop_toBottomOf="@id/screen_title">

                    <TextView
                        android:id="@+id/request_id_tint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/request" />

                    <TextView
                        android:id="@+id/request_id_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="1233480" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_card"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginTop="32dp"
            android:elevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/app_bar" />

        <include
            layout="@layout/fragment_card"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:elevation="8dp"
            app:layout_constraintTop_toBottomOf="@id/app_bar" />

        <TextView
            android:id="@+id/tv_add_new_card"
            style="@style/HeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/add_new_card"
            android:textColor="#A9000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vp_card" />

        <LinearLayout
            android:id="@+id/lv_card_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_add_new_card">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_card_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"
                app:layout_constraintEnd_toEndOf="@+id/logo_text"
                app:layout_constraintStart_toStartOf="@+id/logo_text"
                app:layout_constraintTop_toBottomOf="@+id/username_text">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_card_holder_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/card_holder_name_small"
                app:layout_constraintEnd_toEndOf="@+id/logo_text"
                app:layout_constraintStart_toStartOf="@+id/logo_text"
                app:layout_constraintTop_toBottomOf="@+id/username_text">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edit_text"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_expiry_data"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:hint="@string/expiry_date_small"
                    app:layout_constraintEnd_toEndOf="@+id/logo_text"
                    app:layout_constraintStart_toStartOf="@+id/logo_text"
                    app:layout_constraintTop_toBottomOf="@+id/username_text">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edit_text"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_cvv2"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:hint="@string/cvv2"
                    app:layout_constraintEnd_toEndOf="@+id/logo_text"
                    app:layout_constraintStart_toStartOf="@+id/logo_text"
                    app:layout_constraintTop_toBottomOf="@+id/username_text">

                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edit_text"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_add_new_card"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/add_new_card"
            android:textColor="@color/gray_dark"
            app:layout_constraintTop_toBottomOf="@id/lv_card_data" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_proceed"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_ellipse"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:text="@string/proceed"
            android:textColor="@color/gray_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/HeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/roboto_medium"
            tools:text="$320"
            android:textSize="20sp"
            android:textColor="#A9000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_proceed" />

        <TextView
            android:id="@+id/tv_view_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/view_details_large"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>